--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {margin:0;height:2000px;}
 							</div>
 							<div class="media-body">
 								<h3 class="media-heading">FULL STACK DEVELOPER</h3>
-								<p>Trying to build my skills over HTML, CSS, JavaScript, Jquery, Node.js, React. Contributed my works in many it sectors and their web pages.
+								<p>Trying to build my skills over HTML, CSS, JavaScript, Jquery, Node.js, React. Contributed my works in many IT sectors and their web pages.
                                 </p>
 							</div>
 						</div>
