--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@ body {margin:0;height:2000px;}
 						<h3></h3>
 						<h1>Tharunaditya Anuganti</h1>
 						<h2 class="rotate">DESIGNER &AMP; DEVELOPER, UI &AMP; UX SPECIALIST, PROJECT LEADER, MENTOR, CYBER SECURITY PROFESSIONAL, ETHICAL HACKER, SECURITY ANALYST</h2>
-						<p>Student of Computer Science and Engineering (CYBER SECURITY),web developer, Desginer, UI developer, likes to do projects and colabrate with the infromation technology professionals.
-						Motivated to learn, grow and excel in the IT Industry</p>
+						<p>Student of Computer Science and Engineering (CYBER SECURITY),web developer, Designee , UI developer, likes to do projects and collaborate with the information technology professionals. Motivated to learn, grow and excel in the IT Industry</p>
 						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
 						<a href="files/Tharunaditya.pdf" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Download         Resume</a>
 					</div>
