--- a/index.html
+++ b/index.html
@@ -288,11 +288,10 @@ SEO (Search Engine Opimisation), Blogging and Content Writing</p>
 				<div class="col-lg-6 col-md-6 col-xs-10 wow fadeInUp" data-wow-delay="0.6s">
 						<form role="form" method="post" action="https://formspree.io/f/mleyzrya">
 							<input name="name" type="text" class="form-control" id="name" placeholder="Your Name">
-							<infput name="email" type="email" class="form-control" id="email" placeholder="Your Email">
+							<input name="email" type="email" class="form-control" id="email" placeholder="Your Email">
 							<textarea name="message" rows="5" class="form-control" id="message" placeholder="Your Message"></textarea>
 							<input name="send" type="submit" class="form-control" id="send" value="SEND ME">
-					                <button type="submit">Send</button>
-						</form>
+					                						</form>
 					</div>  
 					
 					<div class="col-md-1 col-sm-1"></div>
