changes index.html file again

--- a/index.html
+++ b/index.html
@@ -461,8 +461,8 @@ body {
        <a href="https://www.instagram.com/adityaanuganti/" class="instagram"><i class="fa fa-instagram"></i></a> 
        <a href="https://www.linkedin.com/in/tharunaditya-anuganti" class="linkedin"><i class="fa fa-linkedin"></i></a>
        <a href="https://github.com/Tharunaditya" class="github"><i class="fa fa-github"></i></a> 
-	   <a href="https://wa.me/7989056568?text=Hi%Mr.%Tharunaditya%,%Just%now%I%have%gone%through%your%profile%,%I%would%like%to%connect%with%you" class="whatsapp"><i class="fa fa-whatsapp"></i></a> 
- 
+	   <a href="https://wa.me/7989056568?text=Hi Mr.Tharunadity, Just now I have gone through your profile , I would like to connect with you" class="whatsapp"><i class="fa fa-whatsapp"></i></a> 
+
 	</div>
 </body>
     </html>
