--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ body {
 						<h3></h3>
 						<br>
 						<h1>THARUNADITYA <br> ANUGANTI</h1>
-						<h2 class="rotate">DESIGNER &AMP; DEVELOPER, UI &AMP; UX SPECIALIST, PROJECT LEADER, MENTOR, CYBER SECURITY PROFESSIONAL, ETHICAL HACKER, SECURITY ANALYST</h2>
+						<h2 class="rotate">DESIGNER &AMP; DEVELOPER, UI &AMP; UX SPECIALIST, PROJECT LEADER, MENTOR, CYBER SECURITY ENTHUSIAST, AI ENTHUSIAST , SECURITY ANALYST</h2>
 						<!--<p>Student of Computer Science and Engineering (CYBER SECURITY),web developer, Designee , UI developer, likes to do projects and collaborate with the information technology professionals. Motivated to learn, grow and excel in the IT Industry</p> -->
 						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
 						<a href="files/Tharunaditya.pdf" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Download         Resume</a>
