Updates SEO optimisation

--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 
 <html lang="en">
 	<head>
+		<!-- Required meta tags -->
 		<meta charset="utf-8">
-        <br>
-		<title>Tharunaditya Anuganti</title>
-		<meta name="keywords" content="Tharunaditya Anuganti">
-		<meta name="description" content="Cybersecurity professional">
-        <meta name="author" content="Tharunaditya Anuganti">
-        
-        
-		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta property="og:site_name" content="Tharunaditya Anuganti"/>
+		
+	
+		<!-- Linkedin Details -->
+		<meta name="description" content="Tharunaditya Anuganti Personal Website" />
+		<meta name="title" property="og:title" content="Tharunaditya Anuganti" />
+		<meta property="og:type" content="Website" />
+		<meta name="description" property="og:description" content="Tharunaditya Anuganti Personal Website" />
+		<meta name="author" content="Tharunaditya Anuganti" />
+		<!-- End Linkedin Details -->
 
 		<!-- animate -->
 		<link rel="stylesheet" href="css/animate.min.css">
