--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@ body {
 					
 					<div class="col-md-6 col-xs-11 wow fadeInRight" data-wow-delay=".9s">
 						<h2>PROVIDED AND SPONSORED BY</h2>
+						<iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=2676722" style='border:none;'></iframe>
 						<img class="mypic2" src="images/microsoft.webp" alt="Microsoft" width="250px" height="50"  style="padding-right:2em;">
 						
 						<img class="mypic2" src="images/linkedin.png" alt="Microsoft" width="200px" height="50" style="padding-right:2em;">
