--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ body {
 							<b>Education: </b>
 							<br>
 							 Currently enrolled in M.Tech with specialization in Cybersecurity Systems and Networks. <br>
-							 Pusued B.Tech Computer Science Engineering with specialization in Cybersecurity.
+							 Pursued B.Tech Computer Science Engineering with specialization in Cybersecurity.
 							<br>
 							<br>
 							<b>Technical Proficiency: </b>
