--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta property="og:site_name" content="Tharunaditya Anuganti"/>
-		
+		<title>Tharunaditya Anuganti</title>
 	
 		<!-- Linkedin Details -->
 		<meta name="description" content="Tharunaditya Anuganti Personal Website" />
