--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="description" property="og:description" content="Tharunaditya Anuganti Personal Website" />
 		<meta name="author" content="Tharunaditya Anuganti" />
 		<!-- End Linkedin Details -->
-
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon" />
 		<!-- animate -->
 		<link rel="stylesheet" href="css/animate.min.css">
 		<!-- bootstrap -->
