--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ body {
 					<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
 						<h3></h3>
 						<br>
-						<h1>THARUNADITYA <br> ANUGANTI</h1>
+						<h1>THARUNADITYA <br> ANUGANTI <br> Security Research Intern @Intel Corportaion</h1>
 						<h2 class="rotate">DESIGNER &AMP; DEVELOPER, UI &AMP; UX SPECIALIST, PROJECT LEADER, MENTOR, CYBER SECURITY ENTHUSIAST, AI ENTHUSIAST , SECURITY ANALYST</h2>
 						<!--<p>Mater of Cybersecurity Systems and Networks,web developer, Designee , UI developer, likes to do projects and collaborate with the information technology professionals. Motivated to learn, grow and excel in the IT Industry</p> -->
 						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
