--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                 <div class="cert-grid">
                     <div class="cert-card glass-card">
                         <div class="cert-logo">
-                            <img src="assets/images/microsoft.webp" alt="Microsoft">
+                            <img src="assets/images/certs/microsoft.webp" alt="Microsoft">
                         </div>
                         <h4>Career Essentials in Generative AI</h4>
                         <p>Microsoft & LinkedIn</p>
@@ -359,7 +359,7 @@
                     </div>
                     <div class="cert-card glass-card">
                         <div class="cert-logo">
-                            <img src="assets/images/google.png" alt="Google">
+                            <img src="assets/images/certs/google.png" alt="Google">
                         </div>
                         <h4>Google Cybersecurity Professional</h4>
                         <p>Coursera - 5 Course Specialization</p>
@@ -367,7 +367,7 @@
                     </div>
                     <div class="cert-card glass-card">
                         <div class="cert-logo">
-                            <img src="assets/images/cisco.png" alt="Cisco">
+                            <img src="assets/images/certs/coursera.png" alt="Coursera">
                         </div>
                         <h4>Cybersecurity Essentials</h4>
                         <p>Cisco Networking Academy</p>
@@ -375,7 +375,7 @@
                     </div>
                     <div class="cert-card glass-card">
                         <div class="cert-logo">
-                            <img src="assets/images/paloalto.png" alt="Palo Alto">
+                            <img src="assets/images/certs/paloalto.png" alt="Palo Alto">
                         </div>
                         <h4>Cybersecurity Academy Internship</h4>
                         <p>Palo Alto Networks</p>
@@ -403,7 +403,7 @@
                 <div class="projects-grid">
                     <div class="project-card" data-category="security">
                         <div class="project-image">
-                            <img src="assets/images/nexgensiem.png" alt="NexGen SIEM">
+                            <img src="assets/images/projects/Nex_Gen_SIEM.png" alt="NexGen SIEM">
                             <div class="project-overlay">
                                 <a href="https://github.com/Tharunaditya/NexGenSIEM_OpenSource_SOC" target="_blank" class="project-link">
                                     <i class="fas fa-external-link-alt"></i>
@@ -427,7 +427,7 @@
 
                     <div class="project-card" data-category="security">
                         <div class="project-image">
-                            <img src="assets/images/watchdog.jpg" alt="WatchDog">
+                            <img src="assets/images/projects/WatchDog_banner.png" alt="WatchDog">
                             <div class="project-overlay">
                                 <a href="https://github.com/Tharunaditya/watch-dog" target="_blank" class="project-link">
                                     <i class="fas fa-external-link-alt"></i>
@@ -450,7 +450,7 @@
 
                     <div class="project-card" data-category="design">
                         <div class="project-image">
-                            <img src="assets/images/buggy.png" alt="Buggy App">
+                            <img src="assets/images/projects/Buggy_food_deliveryapp.png" alt="Buggy App">
                             <div class="project-overlay">
                                 <a href="https://www.linkedin.com/pulse/indulge-purple-paradise-elevate-user-experience-buggy-anuganti/" target="_blank" class="project-link">
                                     <i class="fas fa-external-link-alt"></i>
@@ -473,7 +473,7 @@
 
                     <div class="project-card" data-category="design">
                         <div class="project-image">
-                            <img src="assets/images/redesign.png" alt="Dashboard Redesign">
+                            <img src="assets/images/projects/Dashboard_redesign.png" alt="Dashboard Redesign">
                             <div class="project-overlay">
                                 <a href="https://www.linkedin.com/pulse/unforgettable-journey-tale-boring-dashboard-intern-anuganti/" target="_blank" class="project-link">
                                     <i class="fas fa-external-link-alt"></i>
@@ -496,7 +496,7 @@
 
                     <div class="project-card" data-category="security">
                         <div class="project-image">
-                            <img src="assets/images/cti.jpg" alt="CTI Research">
+                            <img src="assets/images/projects/CTI.jpg" alt="CTI Research">
                             <div class="project-overlay">
                                 <a href="https://github.com/Tharunaditya/Enhancing-Cyber-Resilience-The-Role-of-Threat-Intelligence-in-Risk-Management" target="_blank" class="project-link">
                                     <i class="fas fa-external-link-alt"></i>
