Update Google Cybersecurity certificate link

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                         </div>
                         <h4>Google Cybersecurity Professional</h4>
                         <p>Coursera - 5 Course Specialization</p>
-                        <a href="https://www.coursera.org/" target="_blank" class="cert-link">View Certificate <i class="fas fa-external-link-alt"></i></a>
+                        <a href="https://coursera.org/share/fc9a95aab1e7df98931e53aeb66a13c7" target="_blank" class="cert-link">View Certificate <i class="fas fa-external-link-alt"></i></a>
                     </div>
                     <div class="cert-card glass-card">
                         <div class="cert-logo">
