Update certificate links - Google Coursera and Palo Alto PDF

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                         </div>
                         <h4>Cybersecurity Academy Internship</h4>
                         <p>Palo Alto Networks</p>
-                        <a href="https://www.linkedin.com/in/tharunaditya-anuganti" target="_blank" class="cert-link">View Certificate <i class="fas fa-external-link-alt"></i></a>
+                        <a href="assets/internship-certs/palo_alto_intern_cert.pdf" target="_blank" class="cert-link">View Certificate <i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
             </div>
