Update certificate links and add Cisco certification image

--- a/index.html
+++ b/index.html
@@ -367,11 +367,11 @@
                     </div>
                     <div class="cert-card glass-card">
                         <div class="cert-logo">
-                            <img src="assets/images/certs/coursera.png" alt="Coursera">
+                            <img src="assets/images/certs/cisco.png" alt="Cisco">
                         </div>
-                        <h4>Cybersecurity Essentials</h4>
+                        <h4>Certified Ethical Hacker</h4>
                         <p>Cisco Networking Academy</p>
-                        <a href="#" target="_blank" class="cert-link">View Certificate <i class="fas fa-external-link-alt"></i></a>
+                        <a href="https://www.credly.com/badges/ee5bd019-64d6-4cfc-a2ec-99b39f027232/public_url" target="_blank" class="cert-link">View Certificate <i class="fas fa-external-link-alt"></i></a>
                     </div>
                     <div class="cert-card glass-card">
                         <div class="cert-logo">
