Simplify About section structure for better alignment

--- a/index.html
+++ b/index.html
@@ -199,28 +199,13 @@
                         <p>When I'm not in a terminal window, you'll find me designing intuitive security dashboards in Figma or developing collaborative tools like BugHunterX—a Bash-powered web penetration testing toolkit that brings real-time vulnerability assessment to teams through Discord notifications.</p>
                         
                         <p><strong>My philosophy?</strong> Security isn't just about walls and firewalls—it's about understanding the attacker's mind, anticipating their moves, and building resilient systems that adapt. With every project, every certification (from TCM SEC's Practical Ethical Hacking to Google Cybersecurity Professional), I'm writing my story as a defender in the endless battle for digital safety.</p>
-
-                        <div class="stats-grid">
-                            <div class="stat-item">
-                                <div class="stat-number">10+</div>
-                                <div class="stat-label">Security Tools Mastered</div>
-                            </div>
-                            <div class="stat-item">
-                                <div class="stat-number">5+</div>
-                                <div class="stat-label">Major Projects</div>
-                            </div>
-                            <div class="stat-item">
-                                <div class="stat-number">8+</div>
-                                <div class="stat-label">Certifications</div>
-                            </div>
-                        </div>
                         
                         <div class="education-timeline">
                             <div class="timeline-item">
                                 <div class="timeline-icon"><i class="fas fa-graduation-cap"></i></div>
                                 <div class="timeline-content">
                                     <h4>M.Tech in Cybersecurity Systems & Networks</h4>
-                                    <p class="timeline-institution">Pursuing Advanced Research</p>
+                                    <p>Pursuing Advanced Research in Security Architecture</p>
                                     <p class="timeline-date">2024 - Present</p>
                                 </div>
                             </div>
@@ -228,24 +213,9 @@
                                 <div class="timeline-icon"><i class="fas fa-graduation-cap"></i></div>
                                 <div class="timeline-content">
                                     <h4>B.Tech CSE - Cybersecurity (A Grade)</h4>
-                                    <p class="timeline-institution">Foundation in Security Architecture</p>
+                                    <p>Foundation in Security Systems and Networks</p>
                                     <p class="timeline-date">2020 - 2024</p>
                                 </div>
-                            </div>
-                        </div>
-
-                        <div class="specializations">
-                            <h4>Core Expertise</h4>
-                            <div class="expertise-tags">
-                                <span class="tag">SOC Operations</span>
-                                <span class="tag">Ethical Hacking</span>
-                                <span class="tag">Penetration Testing</span>
-                                <span class="tag">VAPT</span>
-                                <span class="tag">Threat Intelligence</span>
-                                <span class="tag">Digital Forensics</span>
-                                <span class="tag">Generative AI Security</span>
-                                <span class="tag">UI/UX Design</span>
-                                <span class="tag">Web Development</span>
                             </div>
                         </div>
                     </div>
@@ -253,10 +223,6 @@
                         <div class="profile-wrapper">
                             <img src="assets/images/profile.jpg" alt="Tharunaditya Anuganti" class="profile-img">
                             <div class="profile-border"></div>
-                        </div>
-                        <div class="profile-quote">
-                            <i class="fas fa-quote-left"></i>
-                            <p>"Security isn't just my profession—it's my obsession. Every vulnerability I find, every system I secure, brings us one step closer to a safer digital world."</p>
                         </div>
                     </div>
                 </div>
