--- a/index.html
+++ b/index.html
@@ -199,12 +199,19 @@
                         <p>When I'm not in a terminal window, you'll find me designing intuitive security dashboards in Figma or developing collaborative tools like BugHunterX—a Bash-powered web penetration testing toolkit that brings real-time vulnerability assessment to teams through Discord notifications.</p>
                         
                         <p><strong>My philosophy?</strong> Security isn't just about walls and firewalls—it's about understanding the attacker's mind, anticipating their moves, and building resilient systems that adapt. With every project, every certification (from TCM SEC's Practical Ethical Hacking to Google Cybersecurity Professional), I'm writing my story as a defender in the endless battle for digital safety.</p>
+                    </div>
+                    <div class="bio-image">
+                        <div class="profile-wrapper">
+                            <img src="assets/images/profile.jpg" alt="Tharunaditya Anuganti" class="profile-img">
+                            <div class="profile-border"></div>
+                        </div>
                         
                         <div class="education-timeline">
+                            <h4>Educational Qualifications</h4>
                             <div class="timeline-item">
                                 <div class="timeline-icon"><i class="fas fa-graduation-cap"></i></div>
                                 <div class="timeline-content">
-                                    <h4>M.Tech in Cybersecurity Systems & Networks</h4>
+                                    <h5>M.Tech in Cybersecurity Systems & Networks</h5>
                                     <p>Pursuing Advanced Research in Security Architecture</p>
                                     <p class="timeline-date">2024 - Present</p>
                                 </div>
@@ -212,17 +219,26 @@
                             <div class="timeline-item">
                                 <div class="timeline-icon"><i class="fas fa-graduation-cap"></i></div>
                                 <div class="timeline-content">
-                                    <h4>B.Tech CSE - Cybersecurity (A Grade)</h4>
+                                    <h5>B.Tech CSE - Cybersecurity (A Grade)</h5>
                                     <p>Foundation in Security Systems and Networks</p>
                                     <p class="timeline-date">2020 - 2024</p>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="bio-image">
-                        <div class="profile-wrapper">
-                            <img src="assets/images/profile.jpg" alt="Tharunaditya Anuganti" class="profile-img">
-                            <div class="profile-border"></div>
+
+                        <div class="specializations">
+                            <h4>Core Expertise</h4>
+                            <div class="expertise-tags">
+                                <span class="tag">SOC Operations</span>
+                                <span class="tag">Ethical Hacking</span>
+                                <span class="tag">Penetration Testing</span>
+                                <span class="tag">VAPT</span>
+                                <span class="tag">Threat Intelligence</span>
+                                <span class="tag">Digital Forensics</span>
+                                <span class="tag">Generative AI Security</span>
+                                <span class="tag">UI/UX Design</span>
+                                <span class="tag">Web Development</span>
+                            </div>
                         </div>
                     </div>
                 </div>
