Update favicon path to correct location

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="twitter:title" content="Tharunaditya Anuganti | Security Researcher">
     
     <!-- Favicon -->
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/images/favicon/favicon.ico" type="image/x-icon">
     
     <!-- Preconnect for Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
