Add Google Analytics 4 tracking with privacy settings

--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
     <meta name="twitter:site" content="@Tharunaditya1">
     <meta name="twitter:title" content="Tharunaditya Anuganti | Security Researcher">
     
+    <!-- Google Analytics 4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-XXXXXXXXXX', {
+            'anonymize_ip': true,
+            'cookie_flags': 'SameSite=None;Secure'
+        });
+    </script>
+    
     <!-- Favicon -->
     <link rel="icon" href="assets/images/favicon/favicon.ico" type="image/x-icon">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
