Configure Google Analytics with live Measurement ID

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <meta name="twitter:title" content="Tharunaditya Anuganti | Security Researcher">
     
     <!-- Google Analytics 4 -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4NMPLLTCRV"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-XXXXXXXXXX', {
+        gtag('config', 'G-4NMPLLTCRV', {
             'anonymize_ip': true,
             'cookie_flags': 'SameSite=None;Secure'
         });
