Add TryHackMe badge and improve blog content visibility

--- a/index.html
+++ b/index.html
@@ -282,6 +282,10 @@
                             <div class="profile-border"></div>
                         </div>
                         
+                        <div class="tryhackme-badge-section">
+                            <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=2676722" style="border:none; width: 340px; height: 90px; display: block;" title="TryHackMe Profile Badge"></iframe>
+                        </div>
+                        
                         <div class="education-timeline">
                             <h4>Educational Qualifications</h4>
                             <div class="timeline-item">
