Update About page with accurate resume information - Added Intel Corporation internship experience (Jun 2025 - Dec 2025) - Updated education with exact GPAs (M.Tech: 8.81, B.Tech: 8.19) - Added all real certifications (Google, Cisco CEH, C3SA, AWS Academy) - Included leadership roles (Ex-Chairperson ABHEDYA, Chronos Hackathon Winner) - Updated tech stack to match actual tools used (Ghidra, Pydantic, Selenium) - Replaced placeholder content with verified resume data

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ title: About Me
             </div>
             <div class="about-hero-content">
                 <h1 class="about-title">Tharunaditya Anuganti</h1>
-                <p class="about-tagline">Security Researcher | Cybersecurity Enthusiast | AI & UI/UX Specialist</p>
+                <p class="about-tagline">Security Researcher @ Intel | M.Tech in Cybersecurity | AI-Powered Security Solutions</p>
                 <div class="about-social">
                     <a href="https://github.com/Tharunaditya" target="_blank" rel="noopener" class="social-link">
                         <i class="fab fa-github"></i>
@@ -84,22 +84,62 @@ title: About Me
 
         <!-- Journey Section -->
         <section class="about-section">
-            <h2 class="section-title"><i class="fas fa-road"></i> Educational Journey</h2>
+            <h2 class="section-title"><i class="fas fa-road"></i> Professional Experience</h2>
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-marker"></div>
                     <div class="timeline-content">
-                        <h3>2024 - Present</h3>
+                        <h3>Jun 2025 - Dec 2025</h3>
+                        <h4>Security Researcher - Graduate Technical Intern @ Intel Corporation</h4>
+                        <p><strong>Location:</strong> Bengaluru, India</p>
+                        <ul style="list-style: disc; padding-left: 2rem; margin-top: 1rem;">
+                            <li>Contributed to Intel's Threat Modeling Assistant project leveraging AI; optimized performance by reducing redundant LLM calls from O(N²) to O(N)</li>
+                            <li>Assisted in BIOS penetration testing on Panther Lake firmware, identifying deprecated cryptographic algorithms using Ghidra and custom scripts</li>
+                            <li>Reviewed 6 major open-source repositories (Kubernetes, LLVM, Zephyr, Containerd, CRI-O, Trustee) for Intel's compliance standards</li>
+                            <li>Enhanced Intel's SDL chatbot (SecBot) by migrating to Azure OpenAI GPT-4o and optimizing FAISS index for better search accuracy</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-marker"></div>
+                    <div class="timeline-content">
+                        <h3>Mar 2022 - May 2022</h3>
+                        <h4>Cybersecurity Internship @ AICTE & Palo Alto Cybersecurity Academy</h4>
+                        <p>Certified in: Introduction to Cybersecurity, Network Security, Cloud Security, and SOC Fundamentals</p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-marker"></div>
+                    <div class="timeline-content">
+                        <h3>Apr 2022 - May 2023</h3>
+                        <h4>Salesforce Developer Internship @ AICTE & Smart Bridge</h4>
+                        <p>In association with Salesforce, gained hands-on experience in cloud platform development</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Education Section -->
+        <section class="about-section">
+            <h2 class="section-title"><i class="fas fa-graduation-cap"></i> Educational Journey</h2>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-marker"></div>
+                    <div class="timeline-content">
+                        <h3>2024 - 2026</h3>
                         <h4>M.Tech in Cybersecurity Systems & Networks</h4>
-                        <p>Pursuing Advanced Research in Security Architecture, focusing on modern defense strategies and threat intelligence systems</p>
+                        <p><strong>Amrita University, Amritapuri, Kerala</strong> | GPA: 8.81/10</p>
+                        <p>Relevant Courses: Modern Web Application Development and Exploitation, System Security, Cyber Forensics and Incident Response, Network Security, Cryptography Applications, Reverse Engineering and Malware Analysis, Machine Learning for Cybersecurity, VAPT and IoT Security</p>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-marker"></div>
                     <div class="timeline-content">
                         <h3>2020 - 2024</h3>
-                        <h4>B.Tech CSE - Cybersecurity (A Grade)</h4>
-                        <p>Foundation in Security Systems and Networks, specialized coursework in ethical hacking, cryptography, and secure system design</p>
+                        <h4>B.Tech CSE - Cybersecurity</h4>
+                        <p><strong>Vignana Bharathi Institute of Technology, Hyderabad</strong> | GPA: 8.19/10</p>
+                        <p>Relevant Courses: Security and Incident Response Management, VAPT, Ethical Hacking, Cyber Crime Investigation and Digital Forensics, Cryptography and Network Security, Cloud Security</p>
+                        <p><em>Achievement: Final-year project selected as best project in the department</em></p>
                     </div>
                 </div>
             </div>
@@ -110,24 +150,44 @@ title: About Me
             <h2 class="section-title"><i class="fas fa-trophy"></i> Certifications & Achievements</h2>
             <div class="achievements-grid">
                 <div class="achievement-card">
-                    <i class="fas fa-certificate"></i>
-                    <h3>TCM Security</h3>
-                    <p>Practical Ethical Hacking - Advanced hands-on penetration testing certification</p>
-                </div>
-                <div class="achievement-card">
                     <i class="fab fa-google"></i>
-                    <h3>Google Cybersecurity</h3>
-                    <p>Google Cybersecurity Professional Certificate - Comprehensive security foundations</p>
+                    <h3>Google Cybersecurity Professional</h3>
+                    <p>Comprehensive security foundations certification from Google</p>
                 </div>
                 <div class="achievement-card">
                     <i class="fas fa-shield-alt"></i>
-                    <h3>SOC Operations</h3>
-                    <p>Specialized training in Security Operations Center management and threat hunting</p>
+                    <h3>Certified Ethical Hacker</h3>
+                    <p>By Cisco Netacad - Advanced ethical hacking certification</p>
+                </div>
+                <div class="achievement-card">
+                    <i class="fas fa-certificate"></i>
+                    <h3>Certified Cybersecurity Analyst</h3>
+                    <p>C3SA Premium Edition by Cyberwarfare Labs</p>
+                </div>
+                <div class="achievement-card">
+                    <i class="fab fa-aws"></i>
+                    <h3>AWS Academy Graduate</h3>
+                    <p>Cloud Foundations & Machine Learning Foundations</p>
+                </div>
+                <div class="achievement-card">
+                    <i class="fab fa-microsoft"></i>
+                    <h3>Generative AI Essentials</h3>
+                    <p>Career Essentials in Generative AI by Microsoft and LinkedIn</p>
                 </div>
                 <div class="achievement-card">
                     <i class="fas fa-users"></i>
-                    <h3>Community Contributor</h3>
-                    <p>Sharing knowledge through blog posts, tutorials, and open-source security projects</p>
+                    <h3>Ex-Chairperson, ABHEDYA</h3>
+                    <p>Led team of 40, trained 400+ students in cybersecurity awareness (2022-2024)</p>
+                </div>
+                <div class="achievement-card">
+                    <i class="fas fa-trophy"></i>
+                    <h3>Chronos Hackathon Winner</h3>
+                    <p>2nd place among 50+ teams - Developed SubChirp subscription analyzer</p>
+                </div>
+                <div class="achievement-card">
+                    <i class="fas fa-blog"></i>
+                    <h3>Cybersecurity Content Creator</h3>
+                    <p>Regular contributor on LinkedIn and Medium educating cybersecurity enthusiasts</p>
                 </div>
             </div>
         </section>
@@ -137,46 +197,46 @@ title: About Me
             <h2 class="section-title"><i class="fas fa-tools"></i> Tech Stack & Skills</h2>
             <div class="tech-stack">
                 <div class="tech-category">
-                    <h3>Security & Penetration Testing</h3>
+                    <h3>Cybersecurity Tools</h3>
                     <div class="tech-tags">
-                        <span class="tech-tag">SOC Operations</span>
-                        <span class="tech-tag">Ethical Hacking</span>
-                        <span class="tech-tag">VAPT</span>
+                        <span class="tech-tag">Wireshark</span>
                         <span class="tech-tag">Metasploit</span>
                         <span class="tech-tag">Burp Suite</span>
+                        <span class="tech-tag">Nessus</span>
                         <span class="tech-tag">Nmap</span>
-                        <span class="tech-tag">Wireshark</span>
-                        <span class="tech-tag">Digital Forensics</span>
+                        <span class="tech-tag">Docker</span>
+                        <span class="tech-tag">Ghidra</span>
                     </div>
                 </div>
                 <div class="tech-category">
-                    <h3>SIEM & Threat Intelligence</h3>
+                    <h3>SOC & Monitoring</h3>
                     <div class="tech-tags">
                         <span class="tech-tag">ELK Stack</span>
-                        <span class="tech-tag">MITRE ATT&CK</span>
-                        <span class="tech-tag">Threat Hunting</span>
-                        <span class="tech-tag">Incident Response</span>
-                        <span class="tech-tag">Security Analytics</span>
+                        <span class="tech-tag">Splunk</span>
+                        <span class="tech-tag">EDR Platforms</span>
+                        <span class="tech-tag">IDS/IPS</span>
+                        <span class="tech-tag">SIEM Tuning</span>
                     </div>
                 </div>
                 <div class="tech-category">
-                    <h3>Programming & Automation</h3>
+                    <h3>Core Competencies</h3>
+                    <div class="tech-tags">
+                        <span class="tech-tag">VAPT</span>
+                        <span class="tech-tag">Threat Intelligence</span>
+                        <span class="tech-tag">Incident Response</span>
+                        <span class="tech-tag">Digital Forensics</span>
+                        <span class="tech-tag">ML for Cybersecurity</span>
+                    </div>
+                </div>
+                <div class="tech-category">
+                    <h3>Programming & Scripting</h3>
                     <div class="tech-tags">
                         <span class="tech-tag">Python</span>
+                        <span class="tech-tag">C</span>
                         <span class="tech-tag">Bash</span>
-                        <span class="tech-tag">JavaScript</span>
-                        <span class="tech-tag">SQL</span>
-                        <span class="tech-tag">Automation Scripts</span>
-                    </div>
-                </div>
-                <div class="tech-category">
-                    <h3>AI & Design</h3>
-                    <div class="tech-tags">
-                        <span class="tech-tag">Generative AI</span>
-                        <span class="tech-tag">Prompt Engineering</span>
-                        <span class="tech-tag">Figma</span>
-                        <span class="tech-tag">Sketch</span>
-                        <span class="tech-tag">UI/UX Design</span>
+                        <span class="tech-tag">HTML/CSS</span>
+                        <span class="tech-tag">Pydantic</span>
+                        <span class="tech-tag">Selenium</span>
                     </div>
                 </div>
             </div>
