Add toggle control for TryHackMe badge visibility - Added 'show'/'hidden' class control system - Change class in index.html to show/hide badge - Smooth transition animations for visibility

--- a/index.html
+++ b/index.html
@@ -268,7 +268,9 @@
                             <div class="profile-border"></div>
                         </div>
                         
-                        <div class="tryhackme-badge-section">
+                        <!-- Toggle visibility: Add 'hidden' class to hide badge, remove 'hidden' to show -->
+                        <!-- CONTROL: Change 'show' to 'hidden' to hide badge -->
+                        <div class="tryhackme-badge-section show">
                             <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=2676722" style="border:none; width: 340px; height: 90px; display: block;" title="TryHackMe Profile Badge"></iframe>
                         </div>
                         
