Hide TryHackMe badge from profile section

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                         
                         <!-- Toggle visibility: Add 'hidden' class to hide badge, remove 'hidden' to show -->
                         <!-- CONTROL: Change 'show' to 'hidden' to hide badge -->
-                        <div class="tryhackme-badge-section show">
+                        <div class="tryhackme-badge-section hidden">
                             <iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=2676722" style="border:none; width: 340px; height: 90px; display: block;" title="TryHackMe Profile Badge"></iframe>
                         </div>
                         
