FEAT: Add blog enable/disable toggle configuration
- Added 'enable_blog' setting to _config.yml
- Wrapped blog navigation links in default layout and index page with Liquid conditionals
- Allows temporary hiding of blog section via configuration switch

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+---
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -147,7 +149,9 @@
                 <a href="#skills" class="nav-link" role="menuitem">Skills</a>
                 <a href="#certifications" class="nav-link" role="menuitem">Certifications</a>
                 <a href="#projects" class="nav-link" role="menuitem">Projects</a>
+                {% if site.enable_blog %}
                 <a href="blog/index.html" class="nav-link" role="menuitem">Blog</a>
+                {% endif %}
                 <a href="#contact" class="nav-link" role="menuitem">Contact</a>
             </div>
             <div class="nav-controls">
@@ -712,16 +716,20 @@
                         <li><a href="#home">Home</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#projects">Projects</a></li>
+                        {% if site.enable_blog %}
                         <li><a href="blog/index.html">Blog</a></li>
+                        {% endif %}
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
+                {% if site.enable_blog %}
                 <div class="footer-section">
                     <h4>Admin</h4>
                     <ul>
                         <li><a href="admin/index.html">Blog Dashboard</a></li>
                     </ul>
                 </div>
+                {% endif %}
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2026 Tharunaditya Anuganti. All rights reserved.</p>
