--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
                             <span>View My Work</span>
                             <i class="fas fa-arrow-right"></i>
                         </a>
-                        <a href="assets/files/Tharunaditya.pdf" download class="btn btn-secondary">
-                            <i class="fas fa-download"></i>
-                            <span>Download Resume</span>
+                        <a href="assets/files/Tharunaditya.pdf" target="_blank" class="btn btn-secondary">
+                            <i class="fas fa-eye"></i>
+                            <span>Resume</span>
                         </a>
                     </div>
                 </div>
